--- a/lua.html
+++ b/lua.html
@@ -246,7 +246,7 @@
                                     </h5>
                         <p class="card-text">Скрипт находится на стадии разработки.
                         </p>
-                        <a href="/usgo.html" class="btn btn-outline-primary card-button">Перейти</a>
+                        <a href="/admintools.html" class="btn btn-outline-primary card-button">Перейти</a>
                       </div>
                       <div class="card-footer">
                         <div class="row">
