--- a/lua.html
+++ b/lua.html
@@ -188,7 +188,7 @@
                             </div>
                             <div class="col-6">
                               <div class="card-version" title="Обновлён: 12.05.2021">
-                                Версия 6.17
+                                Версия 7.01
                               </div>
                             </div>
                           </div>
@@ -201,7 +201,7 @@
                           <h5 class="card-title">
                     AntiCasino
                                       </h5>
-                          <p class="card-text">Cкрипт целью которого является закрытие доступа к казино игроку.
+                          <p class="card-text">Cкрипт целью которого является закрытие игроку доступ к казино.
                           </p>
                           <a href="/anticasino.html" class="btn btn-outline-primary card-button">Перейти</a>
                         </div>
@@ -239,7 +239,7 @@
                         </div>
                       </div>
                     </div>
-					<div class="card mb-3">
+		    <div class="card mb-3">
                       <div class="card-body">
                         <h5 class="card-title">
                   Admin Tools
@@ -254,7 +254,7 @@
                           </div>
                           <div class="col-6">
                             <div class="card-version" title="Обновлён: 00.00.0000">
-                              Версия 0.00
+                              Версия -
                             </div>
                           </div>
                         </div>
