--- a/lua.html
+++ b/lua.html
@@ -211,7 +211,7 @@
                             </div>
                             <div class="col-6">
                               <div class="card-version" title="Обновлён: 22.05.2021">
-                                Версия 1.00
+                                Версия 1.0
                               </div>
                             </div>
                           </div>
@@ -233,7 +233,7 @@
                           </div>
                           <div class="col-6">
                             <div class="card-version" title="Обновлён: 07.06.2021">
-                              Версия 2.00
+                              Версия 2.0
                             </div>
                           </div>
                         </div>
@@ -254,7 +254,7 @@
                           </div>
                           <div class="col-6">
                             <div class="card-version" title="Обновлён: 00.00.0000">
-                              Версия -
+                              Версия hz
                             </div>
                           </div>
                         </div>
