--- a/about.html
+++ b/about.html
@@ -157,7 +157,7 @@
 
                   <div class="page--foreground">
                     <div class="page--description">
-                      <p><a href="/"><strong>VL4SOV DEV</strong></a> - студия, занимающаяся разработкой дополнений к <a href="http://sa-mp.com/">GTA SA:MP</a>.
+                      <p><a href="https://vl4sov.ml/portfolio/"><strong>VL4SOV DEV</strong></a> - студия, занимающаяся разработкой дополнений к <a href="http://sa-mp.com/">GTA SA:MP</a>.
                         <br data-rich-text-line-break="true" /> Основным направлением студии является разработка Lua скриптов работающих на основе плагина <a href="https://blast.hk/wiki/moonloader:start">MoonLoader</a>. В открытом доступе уже около десятка наших скриптов, а в приватном или единоличном доступе ещё больше.
                         <br data-rich-text-line-break="true" /> Студия оказывает услуги разработки Lua скриптов под различные цели.</p>
 
