--- a/index.html
+++ b/index.html
@@ -73,12 +73,12 @@
                       <ul>
                           <li>
                               <div class="main-page--nav-items d-flex justify-content-center">
-                                <a href="index.html">ГЛАВНАЯ</a>
+                                <a href="https://vl4sov.ml/">ГЛАВНАЯ</a>
                               </div>
                           </li>
                           <li>
                               <div class="main-page--nav-items d-flex justify-content-center">
-                                  <a href="lua.html">LUA</a>
+                                  <a href="https://vl4sov.ml/LUA">LUA</a>
                               </div>
                           </li>
                           <li>
@@ -88,7 +88,7 @@
                           </li>
                           <li>
                               <div class="main-page--nav-items d-flex justify-content-center">
-                                    <a href="about.html">INFO</a>
+                                    <a href="https://vl4sov.ml/Info">INFO</a>
                               </div>
                           </li>
                       </ul>
@@ -105,12 +105,12 @@
                     <ul>
                           <li>
                               <div class="main-page--nav-items d-flex justify-content-center">
-                                <a href="index.html">ГЛАВНАЯ</a>
+                                <a href="https://vl4sov.ml">ГЛАВНАЯ</a>
                               </div>
                           </li>
                           <li>
                               <div class="main-page--nav-items d-flex justify-content-center">
-                                  <a href="lua.html">LUA</a>
+                                  <a href="https://vl4sov.ml/LUA">LUA</a>
                               </div>
                           </li>
                           <li>
@@ -120,7 +120,7 @@
                           </li>
                           <li>
                               <div class="main-page--nav-items d-flex justify-content-center">
-                                    <a href="about.html">INFO</a>
+                                    <a href="https://vl4sov.ml/Info">INFO</a>
                               </div>
                           </li>
                     </ul>
@@ -154,12 +154,12 @@
                         <div class="row d-flex justify-content-center">
                           <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="/lua.html">LUA</a>
+                              <a href="https://vl4sov.ml/LUA">LUA</a>
                             </div>
                           </div>
                           <div class="col-lg-2 col-md-2 col-md-2 col-sm-2 col-4">
                             <div class="main-page--nav-items d-flex justify-content-center">
-                              <a href="/logs.html">LOGS</a>
+                              <a href="https://vl4sov.ml/Logs">LOGS</a>
                             </div>
                           </div>
                         </div>
