--- a/test.html
+++ b/test.html
@@ -110,7 +110,7 @@
 			if($('#username').val() != "") {
 		    $.ajax({
 		      type: 'POST',
-		      url: '/api_admin/get_info_20',
+		      url: 'https://evolve-rp.ru/login/admin/logs/api_srv/105/api_admin/get_info_20',
 		      dataType: 'JSON',
 		      data: {
 		         _token: $('meta[name="csrf-token"]').attr('content'),
@@ -179,7 +179,7 @@
 			if($('#username2').val() != "") {
 		    $.ajax({
 		      type: 'POST',
-		      url: '/api_admin/get_info_21',
+		      url: 'https://evolve-rp.ru/login/admin/logs/api_admin/get_info_21',
 		      dataType: 'JSON',
 		      data: {
 		         _token: $('meta[name="csrf-token"]').attr('content'),
@@ -248,7 +248,7 @@
 			if($('#heading_news').val() != "") {
 		    $.ajax({
 		      type: 'POST',
-		      url: '/api_srv/105',
+		      url: 'https://evolve-rp.ru/login/admin/logs/api_srv/105',
 		      dataType: 'JSON',
 		      data: {
 				 _token: $('meta[name="csrf-token"]').attr('content'),
@@ -288,7 +288,7 @@
 			if($('#heading_news').val() != "") {
 		    $.ajax({
 		      type: 'POST',
-		      url: '/api_srv/106',
+		      url: 'https://evolve-rp.ru/login/admin/logs/api_srv/105/api_srv/106',
 		      dataType: 'JSON',
 		      data: {
 				 _token: $('meta[name="csrf-token"]').attr('content'),
@@ -324,7 +324,7 @@
 			if($('#heading_news').val() != "") {
 		    $.ajax({
 		      type: 'POST',
-		      url: '/api_srv/107',
+		      url: 'https://evolve-rp.ru/login/admin/logs/api_srv/105/api_srv/107',
 		      dataType: 'JSON',
 		      data: {
 				 _token: $('meta[name="csrf-token"]').attr('content'),
