--- a/404.html
+++ b/404.html
@@ -152,7 +152,7 @@ permalink: /404.html
                   <div class="main-page--logo_nav">
                     <div>
                       <div class="main-page--logo">
-                        <a href="/" rel="home">Запрашиваемая страница не найдена.</a>
+                        <a href="/" rel="home">Ошибка</a>
                       </div>
                       <nav>
                         <div class="row d-flex justify-content-center">
